package com.github.studeasy.gui.controller.home;

import java.net.URL;
import java.util.ResourceBundle;

public class HomeAbstractController  {



}
